--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,7 @@
 .home {
 
   .intro {
-
+    margin-top: 115px;
     h2 {
       padding: 15px;
     }
